---
source: crates/math-core/tests/error_test.rs
expression: x & y
---
Error: Found "&", which may only appear in a table-like environment.
   ╭─[ <input>:1:3 ]
   │
 1 │ x & y
   │   ┬  
   │   ╰── cannot be used here
───╯
